preparing for market place

--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/asset_category_admin/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/asset_category_admin/css/rtl/main.css
@@ -264,7 +264,7 @@
 			}
 
 			&.aui-tree-collapsed .aui-tree-hitarea {
-				background-position: 0 50%;
+				background-position: right 50%   /*rtl*/
 			}
 
 			.aui-tree-node-checkbox-container, .aui-tree-label {
