--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/wiki/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/wiki/css/rtl/main.css
@@ -210,7 +210,7 @@
 	}
 
 	.history-navigation span.previous {
-		background-position: 0 100%;
+		background-position: right 100%   /*rtl*/
 	}
 
 	.history-navigation {
